# R-ressources

./: .clippy.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  deny.toml  justfile  rustfmt.toml
codegen/: mod.rs  multi_file.rs  references.rs  types.rs
codegen/generator/: advanced.rs  basic.rs  flat.rs  mod.rs
codegen/parser/: advanced.rs  mod.rs  templates.rs
docs/: CODEGEN_REFACTOR.md  MISSING_FEATURES.md
examples/: api_errors.rs  basic_usage.rs  v04_typed.rs  v05_ns.rs  v06_concat.rs
generator/: mod.rs  pipeline.rs  utils.rs
generator/analysis/: mod.rs
generator/generation/: mod.rs
generator/generation/flat/: emitter.rs  mod.rs  tree.rs
generator/input/: mod.rs
generator/input/loader/: error.rs  mod.rs  profile.rs  raw_file.rs  scan.rs
generator/ir/: builder.rs  mod.rs  model.rs
generator/ir/types/: README.md  bool.rs  color.rs  mod.rs  number.rs  string.rs  template.rs
generator/parsing/: ast.rs  error.rs  mod.rs
generator/parsing/reader/: handlers.rs  mod.rs  state.rs  utils.rs
res/: advanced.xml  values.xml  values_api_errors.xml
src/: lib.rs
tests/: v02_types.rs  v04_typed.rs  v05_ns.rs  v06_concat.rs
