[package]
name = "r-resources"
version = "0.9.0"
edition = "2021"
description = "Android-style resource management for Rust - compile-time type-safe resource access"
license = "MIT"
repository = "https://github.com/Glubus/r-resources"
authors = ["Glubus"]
keywords = ["resources", "build-time", "xml", "config"]
categories = ["config", "development-tools::build-utils"]
readme = "README.md"

[dependencies]
tempfile = "3.8"
quick-xml = "0.38"
bigdecimal = "0.4.9"

[build-dependencies]
quick-xml = "0.38"
bigdecimal = "0.4.9"
